# shorekeeper-chatbot

./: .env.example  Cargo.toml
src/: lib.rs  main.rs
src/middleware/: auth.rs
src/models/: chat.rs  config.rs
src/routes/: chat.rs  health.rs  mod.rs  usage.rs
src/schemas/: chat.rs  config.rs
src/services/: fetcher.rs  llm.rs  mod.rs  redis.rs
