[package]
name = "shorekeeper-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
 
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
 
# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
 
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
# Error handling
anyhow = "1"
thiserror = "1"
 
# UUID
uuid = { version = "1", features = ["v4"] }