[package]
name = "shorekeeper-chatbot"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
# tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1.12.3"
